--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,26 @@ _testmain.go
 *.test
 
 **/.sass_cache
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+## Icon must end with two \r
+Icon
+
+
+## Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
