--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "contentdir": "content",
     "layoutdir": "layouts",
     "publishdir": "public",
+    "languageCode": "en-us",
     "builddrafts": false,
     "indexes": {
        "category": "categories",
